update the code struct

--- a/index.html
+++ b/index.html
@@ -1,90 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NGO Header</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<nav style="height: 40px;">
-  <h1>N G O</h1>
-  <a href="profile.html" class="header-option">Home</a>
-  <a href="profile.html" class="header-option">Profile</a>
-  <a href="profile.html" class="header-option">Gallery</a>
-  <a href="profile.html" class="header-option">Join Us</a>
-</nav>
 
-  
+<body>
+  <!-- Header Navigation -->
+  <header>
+    <nav style="height: 40px;">
+      <h1>N G O</h1>
+      <a href="profile.html" class="header-option">Home</a>
+      <a href="profile.html" class="header-option">Profile</a>
+      <a href="profile.html" class="header-option">Gallery</a>
+      <a href="profile.html" class="header-option">Join Us</a>
+    </nav>
+  </header>
 
-  <div class="image-container">
-    <img src="images/ngo_picture2.jpg" alt="main_image">
+  <!-- Main Banner Section -->
+  <section class="image-container">
+    <img src="images/ngo_picture2.jpg" alt="Main Image">
     <h2 id="IMG_TITLE">HOPE IN</h2>
     <h1 id="IMG_TITLE2">ACTION</h1>
     <p id="description">
-      With your support, we can do more. Your donation, no matter how much, will help us reach more poor communities to feed them and empower them.
+      With your support, we can do more. Your donation, no matter how much, will help us reach more poor communities to
+      feed them and empower them.
     </p>
-  </div>
-<div>
-  <p id="after_image_title">Welcome to NGO</p>
-  <p class="slogan">We Believe That We Can Eradicate</p>
-  <p id="slogan1">Poverty</p>
-  <p id="slogan2">With You</p>
-</div>
+  </section>
 
-<div class="container">
-  <div class="circular-container">
-    <img src="images/care.webp"/>
-  </div>
-  <div class="circular-container">
-   <img src="images/donate.jpg" alt="">
-  </div>
-  <div class="circular-container">
-    <img src="images/prayer1.webp" alt="">
-  </div>
-</div>
+  <!-- Welcome Section -->
+  <section>
+    <p id="after_image_title">Welcome to NGO</p>
+    <p class="slogan">We Believe That We Can Eradicate</p>
+    <p id="slogan1">Poverty</p>
+    <p id="slogan2">With You</p>
+  </section>
 
+  <!-- Circular Image Section -->
+  <section class="container">
+    <div class="circular-container">
+      <img src="images/care.webp" alt="Care">
+    </div>
+    <div class="circular-container">
+      <img src="images/donate.jpg" alt="Donate">
+    </div>
+    <div class="circular-container">
+      <img src="images/prayer1.webp" alt="Prayer">
+    </div>
+  </section>
 
-<div class="text_under_container">
-<div>
-  <h3>Support</h3>
-</div>
+  <!-- Circular Image Text Section -->
+  <section class="text-under-container">
+    <div>
+      <h3>Support</h3>
+    </div>
+    <div>
+      <h3>Donate</h3>
+    </div>
+    <div>
+      <h3>Prayer</h3>
+    </div>
+  </section>
 
-<div>
-  <h3>Donate</h3>
-</div>
+  <!-- Secondary Image Section -->
+  <section id="secondary-img">
+    <img src="images/WhatsApp_Image_2024-12-03_at_8.37.19_AM-removebg-preview.png" alt="Secondary Image">
+  </section>
 
-<div>
-  <h3>Parayer</h3>
-</div>
+  <!-- What We Do Section -->
+  <section class="what-we-do">
+    <div style="color: orange;">What</div>
+    <div style="color: aliceblue;">We</div>
+    <div style="color: green;">Do</div>
+  </section>
 
-</div>
-
-
-
-<div id="secondry_img">
-  <img src="images/WhatsApp_Image_2024-12-03_at_8.37.19_AM-removebg-preview.png" alt="">
-</div>
-
-
-<div class="what_we_do">
-  <div style="color: orange;">What</div>
-  <div style="color: aliceblue;">We</div>
-  <div style="color: green;">Do</div>
-
-</div>
-<div>
-<pre id="who">                          At [NGO Name], we believe in 
-                      creating lasting change by 
-                      empowering communities,
-                       uplifting the vulnerable, 
-                         and advocating for a 
-                          sustainable future.
-                            Founded on the principles of 
-                           compassion, equality, and 
-  inclusion,our mission is to  address pressing social,
-   economic, and environmental challenges through
-  innovative solutions and collaborative efforts.</pre>
-</div>
-
+  <!-- About Us Section -->
+  <section>
+    <pre id="who">
+      At [NGO Name], we believe in creating lasting change by 
+      empowering communities, uplifting the vulnerable, 
+      and advocating for a sustainable future. 
+      
+      Founded on the principles of compassion, equality, and 
+      inclusion, our mission is to address pressing social, 
+      economic, and environmental challenges through innovative 
+      solutions and collaborative efforts.
+    </pre>
+  </section>
 </body>
+
 </html>
