--- a/index.html
+++ b/index.html
@@ -11,75 +11,67 @@
 <body>
   <!-- Header Navigation -->
   <header>
-    <nav style="height: 40px;">
-      <h1>N G O</h1>
-      <a href="profile.html" class="header-option">Home</a>
-      <a href="profile.html" class="header-option">Profile</a>
-      <a href="profile.html" class="header-option">Gallery</a>
-      <a href="profile.html" class="header-option">Join Us</a>
+    <nav class="nav-bar">
+      <h1 class="logo">N G O</h1>
+      <div class="nav-links">
+        <a href="profile.html" class="header-option">Home</a>
+        <a href="profile.html" class="header-option">Profile</a>
+        <a href="profile.html" class="header-option">Gallery</a>
+        <a href="profile.html" class="header-option">Join Us</a>
+      </div>
     </nav>
   </header>
 
   <!-- Main Banner Section -->
   <section class="image-container">
     <img src="images/ngo_picture2.jpg" alt="Main Image">
-    <h2 id="IMG_TITLE">HOPE IN</h2>
-    <h1 id="IMG_TITLE2">ACTION</h1>
-    <p id="description">
-      With your support, we can do more. Your donation, no matter how much, will help us reach more poor communities to
-      feed them and empower them.
-    </p>
+    <div class="banner-text">
+      <h2>HOPE IN</h2>
+      <h1>ACTION</h1>
+      <p>
+        With your support, we can do more. Your donation, no matter how much, will help us reach more poor communities
+        to feed them and empower them.
+      </p>
+    </div>
   </section>
 
   <!-- Welcome Section -->
-  <section>
-    <p id="after_image_title">Welcome to NGO</p>
+  <section class="welcome-section">
+    <p class="title">Welcome to NGO</p>
     <p class="slogan">We Believe That We Can Eradicate</p>
-    <p id="slogan1">Poverty</p>
-    <p id="slogan2">With You</p>
+    <p class="slogan-highlight">Poverty</p>
+    <p class="slogan-highlight">With You</p>
   </section>
 
   <!-- Circular Image Section -->
   <section class="container">
     <div class="circular-container">
       <img src="images/care.webp" alt="Care">
+      <h3>Support</h3>
     </div>
     <div class="circular-container">
       <img src="images/donate.jpg" alt="Donate">
+      <h3>Donate</h3>
     </div>
     <div class="circular-container">
       <img src="images/prayer1.webp" alt="Prayer">
-    </div>
-  </section>
-
-  <!-- Circular Image Text Section -->
-  <section class="text-under-container">
-    <div>
-      <h3>Support</h3>
-    </div>
-    <div>
-      <h3>Donate</h3>
-    </div>
-    <div>
       <h3>Prayer</h3>
     </div>
   </section>
 
   <!-- Secondary Image Section -->
-  <section id="secondary-img">
+  <section class="secondary-img">
     <img src="images/WhatsApp_Image_2024-12-03_at_8.37.19_AM-removebg-preview.png" alt="Secondary Image">
   </section>
 
   <!-- What We Do Section -->
   <section class="what-we-do">
-    <div style="color: orange;">What</div>
-    <div style="color: aliceblue;">We</div>
-    <div style="color: green;">Do</div>
-  </section>
-
-  <!-- About Us Section -->
-  <section>
-    <pre id="who">
+    <div class="what-title">
+      <span style="color: orange;">What</span>
+      <span style="color: aliceblue;">We</span>
+      <span style="color: green;">Do</span>
+    </div>
+    <pre class="description">
       At [NGO Name], we believe in creating lasting change by 
       empowering communities, uplifting the vulnerable, 
       and advocating for a sustainable future. 
