--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     }
 
     header {
-      background: #005f73;
-      color: #fff;
+      background: #2c3e50;
+      /* Dark blue shade for a premium look */
+      color: #ecf0f1;
+      /* Soft white for text */
       padding: 10px 20px;
       text-align: center;
     }
@@ -24,12 +26,14 @@
     nav {
       display: flex;
       justify-content: center;
-      background: #0a9396;
+      background: #8e44ad;
+      /* Vibrant purple to catch the user's attention */
       padding: 10px 0;
     }
 
     nav a {
-      color: white;
+      color: #ecf0f1;
+      /* Soft white for links */
       padding: 0 15px;
       text-decoration: none;
       font-weight: bold;
@@ -62,6 +66,7 @@
       padding: 10px 20px;
       margin: 20px 0;
       background-color: gold;
+      /* Gold color for the button for a luxurious appeal */
       color: black;
       text-decoration: none;
       font-weight: bold;
@@ -70,8 +75,9 @@
     }
 
     footer {
-      background: #023047;
-      color: white;
+      background: #34495e;
+      /* Darker shade of blue for the footer */
+      color: #ecf0f1;
       text-align: center;
       padding: 10px 0;
       position: absolute;
@@ -104,44 +110,6 @@
   <footer>
     <p>Copyright © Your NGO Name 2020</p>
   </footer>
-  <script>
-    const images = [
-      'images/ngo_picture1.jpg',
-      'images/ngo_picture2.jpg',
-      'images/ngo_picture3.webp'
-    ];
-    let currentIndex = 0;
-
-    function changeBackground() {
-      const heroSection = document.getElementById('hero');
-      switch (currentIndex % 3) {
-        case 0: // Fade transition
-          heroSection.style.opacity = 0;
-          setTimeout(() => {
-            heroSection.style.backgroundImage = `url('${images[currentIndex]}')`;
-            heroSection.style.opacity = 1;
-          }, 1000);
-          break;
-        case 1: // Slide transition
-          heroSection.style.transform = 'translateX(-100%)';
-          setTimeout(() => {
-            heroSection.style.backgroundImage = `url('${images[currentIndex]}')`;
-            heroSection.style.transform = 'translateX(0)';
-          }, 1000);
-          break;
-        case 2: // Zoom transition
-          heroSection.style.transform = 'scale(1.2)';
-          setTimeout(() => {
-            heroSection.style.backgroundImage = `url('${images[currentIndex]}')`;
-            heroSection.style.transform = 'scale(1)';
-          }, 1000);
-          break;
-      }
-      currentIndex = (currentIndex + 1) % images.length;
-    }
-
-    setInterval(changeBackground, 5000);
-  </script>
 </body>
 
 </html>
