--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 
     header {
       background: #2c3e50;
-      /* Dark blue shade for a premium look */
       color: #ecf0f1;
-      /* Soft white for text */
       padding: 10px 20px;
       text-align: center;
     }
@@ -27,28 +25,38 @@
       display: flex;
       justify-content: center;
       background: #8e44ad;
-      /* Vibrant purple to catch the user's attention */
       padding: 10px 0;
     }
 
     nav a {
       color: #ecf0f1;
-      /* Soft white for links */
       padding: 0 15px;
       text-decoration: none;
       font-weight: bold;
     }
 
     .hero {
-      background: url('images/ngo_picture3.webp') no-repeat center center/cover;
-      color: white;
+      position: relative;
       height: 400px;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
+    }
+
+    .hero-background {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: url('images/ngo_picture3.webp') no-repeat center center/cover;
       transition: all 1s ease-in-out;
-      /* General transition for all changes */
+      z-index: -1;
+    }
+
+    .hero-content {
+      position: relative;
+      color: white;
+      z-index: 1;
     }
 
     .hero h1 {
@@ -66,7 +74,6 @@
       padding: 10px 20px;
       margin: 20px 0;
       background-color: gold;
-      /* Gold color for the button for a luxurious appeal */
       color: black;
       text-decoration: none;
       font-weight: bold;
@@ -76,7 +83,6 @@
 
     footer {
       background: #34495e;
-      /* Darker shade of blue for the footer */
       color: #ecf0f1;
       text-align: center;
       padding: 10px 0;
@@ -98,9 +104,12 @@
     <a href="#contact">Contact</a>
   </nav>
   <div class="hero" id="hero">
-    <h1>Making a Difference</h1>
-    <p>Join us in our mission to change lives.</p>
-    <button class="donate-button">Donate Now</button>
+    <div class="hero-background" id="backgroundImage"></div>
+    <div class="hero-content">
+      <h1>Making a Difference</h1>
+      <p>Join us in our mission to change lives.</p>
+      <button class="donate-button">Donate Now</button>
+    </div>
   </div>
   <div class="content">
     <h2>About Us</h2>
@@ -110,6 +119,44 @@
   <footer>
     <p>Copyright © Your NGO Name 2020</p>
   </footer>
+  <script>
+    const images = [
+      'images/ngo_picture1.jpg',
+      'images/ngo_picture2.jpg',
+      'images/ngo_picture3.webp'
+    ];
+    let currentIndex = 0;
+
+    function changeBackground() {
+      const backgroundImage = document.getElementById('backgroundImage');
+      switch (currentIndex % 3) {
+        case 0: // Fade transition
+          backgroundImage.style.opacity = 0;
+          setTimeout(() => {
+            backgroundImage.style.backgroundImage = `url('${images[currentIndex]}')`;
+            backgroundImage.style.opacity = 1;
+          }, 1000);
+          break;
+        case 1: // Slide transition
+          backgroundImage.style.transform = 'translateX(-100%)';
+          setTimeout(() => {
+            backgroundImage.style.backgroundImage = `url('${images[currentIndex]}')`;
+            backgroundImage.style.transform = 'translateX(0)';
+          }, 1000);
+          break;
+        case 2: // Zoom transition
+          backgroundImage.style.transform = 'scale(1.2)';
+          setTimeout(() => {
+            backgroundImage.style.backgroundImage = `url('${images[currentIndex]}')`;
+            backgroundImage.style.transform = 'scale(1)';
+          }, 1000);
+          break;
+      }
+      currentIndex = (currentIndex + 1) % images.length;
+    }
+
+    setInterval(changeBackground, 5000);
+  </script>
 </body>
 
 </html>
