adding the code

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     @media (max-width: 600px) {
       .nav-item img {
-        max-width: 100px;
+        max-width: 80px;
       }
     }
 
@@ -180,9 +180,12 @@
       <span>Donate</span>
     </div>
     <div class="nav-item">
-      <img src="images/support.png" alt="Contact">
-      <span>Contact</span>
+      <a href="contact.html" style="text-decoration: none; color: inherit;">
+        <img src="images/contact.png" alt="Contact Us Icon">
+        <span>Contact</span>
+      </a>
     </div>
+
   </div>
   <div class="content">
     <h2>About Us</h2>
