--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,36 @@
             background-color: #2c3e50;
             color: white;
             padding: 10px 20px;
-            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .back-button {
+            font-size: 16px;
+            color: white;
+            text-decoration: none;
+            background: none;
+            border: none;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+        }
+
+        .back-button:hover {
+            text-decoration: underline;
+        }
+
+        .back-icon {
+            margin-right: 5px;
+            font-weight: bold;
         }
 
         header h1 {
             margin: 0;
             font-size: 24px;
+            flex: 1;
+            text-align: center;
         }
 
         main {
@@ -104,6 +128,10 @@
 
 <body>
     <header>
+        <!-- Back Button -->
+        <button class="back-button" onclick="goBack()">
+            <span class="back-icon">←</span> Back
+        </button>
         <h1>Contact Us</h1>
     </header>
     <main>
@@ -128,7 +156,7 @@
                 </div>
                 <div class="contact-details">
                     <h3>Rajendro Sau</h3>
-                    <p><strong>Role:</strong> Lead Developer </p>
+                    <p><strong>Role:</strong> Lead Developer</p>
                     <p><strong>Email:</strong> <a href="mailto:rajandroprosad@gmail.com">rajandroprosad@gmail.com</a>
                     </p>
                     <p><strong>Phone:</strong> <a href="tel:+91 8250771252">+91 8250771252</a></p>
@@ -143,8 +171,7 @@
                 <div class="contact-details">
                     <h3>Deep Mondal</h3>
                     <p><strong>Role:</strong> Jr Developer</p>
-                    <p><strong>Email:</strong> <a
-                            href="mailto:deepmon82500@gmail.com">deepmon82500@gmail.com</a></p>
+                    <p><strong>Email:</strong> <a href="mailto:deepmon82500@gmail.com">deepmon82500@gmail.com</a></p>
                     <p><strong>Phone:</strong> <a href="tel:+91 8250050806">+91 8250050806</a></p>
                 </div>
             </div>
@@ -155,6 +182,12 @@
     <footer>
         <p>© 2024 ADYASAKTI - Human Welfare and Research Development Trust. All rights reserved.</p>
     </footer>
+
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 
 </html>
