--- a/index.html
+++ b/index.html
@@ -92,8 +92,16 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      text-align: center; /* Ensures text aligns to the center */
       margin: 0 10px;
     }
+
+    .nav-item a {
+      text-decoration: none;
+      color: inherit; /* Inherits color from parent, for uniform styling */
+      display: block; /* Ensures the link takes the full space of its container */
+    }
+
 
     .nav-item img {
       width: 100%;
@@ -186,6 +194,7 @@
       </a>
     </div>
 
+
   </div>
   <div class="content">
     <h2>About Us</h2>
@@ -236,7 +245,7 @@
       menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
     }
 
-    setInterval(changeBackground, 5000);
+    setInterval(changeBackground, 10000);
   </script>
 </body>
 
