adding the adout us

--- a/index.html
+++ b/index.html
@@ -196,11 +196,18 @@
 
 
   </div>
-  <div class="content">
-    <h2>About Us</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua.</p>
-  </div>
+<div class="content">
+  <h2>About Us</h2>
+  <p>At ADYASAKTI, we are dedicated to empowering the most vulnerable sections of society by fostering independence and
+    economic growth. Our mission is to support individuals with disabilities by helping them set up small businesses,
+    equipping them with the necessary skills and resources to thrive independently. We also focus on empowering women by
+    providing them with opportunities and support to start their own businesses, enhancing their economic stability and
+    community involvement.</p>
+  <p>In addition to our economic development programs, we nurture a sense of community and cultural identity through our
+    own cultural and sports teams. These initiatives offer a platform for personal development and social interaction,
+    while promoting physical health and cultural expression among our members. Join us in making a significant impact in
+    the lives of many and help us change the world one step at a time.</p>
+</div>
   <footer>
     <p>Copyright © ADYASAKTI - Human Welfare and Research Development Trust 2024</p>
   </footer>
