--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
                     <h3>Kamal Krishna Mondal</h3>
                     <p><strong>Role:</strong> Director</p>
                     <p><strong>Email:</strong> <a href="mailto:kkmexe1@gmail.com">kkmexe1@gmail.com</a></p>
-                    <p><strong>Phone:</strong> <a href="tel:+91">+91 9851754966</a></p>
+                    <p><strong>Phone:</strong> <a href="tel:+91 9851754966">+91 9851754966</a></p>
                 </div>
             </div>
 
