--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
   </div>
   <div class="nav-images">
     <div class="nav-item">
-      <img src="images/prayer1.webp" alt="Home">
-      <span>Home</span>
+      <img src="images/importent_-removebg-preview.png" alt="importent_documents">
+      <span>Importent Documents</span>
     </div>
     <div class="nav-item">
       <img src="images/prayer1.png" alt="Our Impact">
