--- a/index.html
+++ b/index.html
@@ -176,20 +176,20 @@
   </div>
   <div class="nav-images">
     <div class="nav-item">
-      <img src="images/importent_-removebg-preview.png" alt="importent_documents">
+      <img src="images/Favorite_Folder_Animated_3D_Icon.gif" alt="importent_documents">
       <span>Importent Documents</span>
     </div>
     <div class="nav-item">
-      <img src="images/prayer1.png" alt="Our Impact">
+      <img src="images/Gallery_3D_Animated_Icon.gif" alt="Our Impact">
       <span>Our Impact</span>
     </div>
     <div class="nav-item">
-      <img src="images/donate.jpg" alt="Donate">
+      <img src="images/Donate_3D_Animated_Icon.gif" alt="Donate">
       <span>Donate</span>
     </div>
     <div class="nav-item">
       <a href="contact.html" style="text-decoration: none; color: inherit;">
-        <img src="images/contact.png" alt="Contact Us Icon">
+        <img src="images/Contact_3D_Animated_Icon.gif" alt="Contact Us Icon">
         <span>Contact</span>
       </a>
     </div>
