update the yaml

--- a/html/contact.html
+++ b/html/contact.html
@@ -139,7 +139,7 @@
             <!-- Contact 1 -->
             <div class="contact-card">
                 <div class="profile-pic">
-                    <img src="images/KamalKrishna-removebg-preview.png" alt="Kamal Krishna Mondal">
+                    <img src="../images/KamalKrishna-removebg-preview.png" alt="Kamal Krishna Mondal">
                 </div>
                 <div class="contact-details">
                     <h3>Kamal Krishna Mondal</h3>
@@ -152,7 +152,7 @@
             <!-- Contact 2 -->
             <div class="contact-card">
                 <div class="profile-pic">
-                    <img src="images/Rajendro.jpeg" alt="Rajendro Sau">
+                    <img src="../images/Rajendro.jpeg" alt="Rajendro Sau">
                 </div>
                 <div class="contact-details">
                     <h3>Rajendro Sau</h3>
@@ -166,7 +166,7 @@
             <!-- Contact 3 -->
             <div class="contact-card">
                 <div class="profile-pic">
-                    <img src="images/Deep-removebg-preview.png" alt="Deep Mondal">
+                    <img src="../images/Deep-removebg-preview.png" alt="Deep Mondal">
                 </div>
                 <div class="contact-details">
                     <h3>Deep Mondal</h3>
