--- a/index.html
+++ b/index.html
@@ -176,20 +176,24 @@
   </div>
   <div class="nav-images">
     <div class="nav-item">
-      <img src="images/Favorite_Folder_Animated_3D_Icon.gif" alt="importent_documents">
-      <span>Importent Documents</span>
+      <a href="html/importentDocuments.html" style="text-decoration: none; color: inherit;">
+        <img src="images/Favorite_Folder_Animated_3D_Icon.gif" alt="important_documents" style="display: block; margin: auto;">
+        <span>Important Documents</span>
+      </a>
     </div>
     <div class="nav-item">
-      <img src="images/Gallery_3D_Animated_Icon.gif" alt="Our Impact">
+      <a href="html/impact.html" style="text-decoration: none; color: inherit;">
+      <img src="images/Gallery_3D_Animated_Icon.gif" alt="Our Impact" style="display: block; margin: auto;">
       <span>Our Impact</span>
     </div>
     <div class="nav-item">
-      <img src="images/Donate_3D_Animated_Icon.gif" alt="Donate">
+      <a href="html/donate.html" style="text-decoration: none; color: inherit;">
+      <img src="images/Donate_3D_Animated_Icon.gif" alt="Donate" style="display: block; margin: auto;">
       <span>Donate</span>
     </div>
     <div class="nav-item">
-      <a href="contact.html" style="text-decoration: none; color: inherit;">
-        <img src="images/Contact_3D_Animated_Icon.gif" alt="Contact Us Icon">
+      <a href="html/contact.html" style="text-decoration: none; color: inherit;">
+        <img src="images/Contact_3D_Animated_Icon.gif" alt="Contact Us Icon" style="display: block; margin: auto;">
         <span>Contact</span>
       </a>
     </div>
