remove unUse code and code Reformat

--- a/html/contact.html
+++ b/html/contact.html
@@ -157,8 +157,7 @@
                 <div class="contact-details">
                     <h3>Rajendro Sau</h3>
                     <p><strong>Role:</strong> Lead Developer</p>
-                    <p><strong>Email:</strong> <a href="mailto:rajandroprosad@gmail.com">rajandroprosad@gmail.com</a>
-                    </p>
+                    <p><strong>Email:</strong> <a href="mailto:rajandroprosad@gmail.com">rajandroprosad@gmail.com</a></p>
                     <p><strong>Phone:</strong> <a href="tel:+91 8250771252">+91 8250771252</a></p>
                 </div>
             </div>
